--- a/List Computer Science.csproj
+++ b/List Computer Science.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Question3.cs" />
     <Compile Include="Question4.cs" />
     <Compile Include="Question5.cs" />
+    <Compile Include="Question6.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
