--- a/List Computer Science.csproj
+++ b/List Computer Science.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Question4.cs" />
     <Compile Include="Question5.cs" />
     <Compile Include="Question6.cs" />
+    <Compile Include="Question7.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
